--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <canvas width="1024" height="576"></canvas>
 </body>
 <script src="./classes/Player.js"></script>
-<script src="script.js"></script>
+<script src="./eventListeners.js"></script>
+<script src="./script.js"></script>
 </html>
