--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
     <canvas width="1024" height="576"></canvas>
 </body>
+<script src="./classes/Sprite.js"></script>
 <script src="./classes/Player.js"></script>
 <script src="./eventListeners.js"></script>
+<script src="./data/collisionWalls.js"></script>
 <script src="./script.js"></script>
 </html>
