--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <body>
     <canvas width="1024" height="576"></canvas>
 </body>
+<script src="./utils/utils.js"></script>
+<script src="./data/collision.js"></script>
+<script src="./classes/CollisionBlock.js"></script>
 <script src="./classes/Sprite.js"></script>
 <script src="./classes/Player.js"></script>
 <script src="./eventListeners.js"></script>
-<script src="./data/collisionWalls.js"></script>
 <script src="./script.js"></script>
 </html>
