--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         canvas {
             border: 1px solid white;
+            background-color: wheat;
         }
     </style>
     <title>Document</title>
