--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 <body>
     <canvas width="1024" height="576"></canvas>
+    <button onclick="turnOnBoxes()">Turn On Boxes</button>
+    <button onclick="turnOffBoxes()">Turn Off Boxes</button>
 </body>
 <script src="./utils/utils.js"></script>
 <script src="./data/collision.js"></script>
