move screen with player

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <script src="./classes/CollisionBlock.js"></script>
 <script src="./classes/Sprite.js"></script>
 <script src="./classes/Player.js"></script>
+<script src="./classes/Camera.js"></script>
 <script src="./eventListeners.js"></script>
 <script src="./script.js"></script>
 </html>
