reduced lines of code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div>
         <button onclick="turnOnBoxes()">Turn On Boxes</button>
         <button onclick="turnOffBoxes()">Turn Off Boxes</button>
+        <button onclick="camera.turnOn()">Show Camera</button>
+        <button onclick="camera.turnOff()">Hide Camera</button>
     </div>
 </body>
 <script src="./utils/utils.js"></script>
